======================
- Changed how the New command works. Now will create files locally and upload them.
- Fixed a problem with uploading compiled assets
- Decoupled config file from command execution so any command can run without
	a config file.
- Added environment variable interpolation into config files.
- Added a global environment variable file so that variables can be easily
managed

v0.8.1 (Sept 18, 2018)
======================
- Added checksums to the download links
- Added checksum validation for auto install scripts
- Added support for freebsd
- Fixed deploy for windows paths
- Fixed overwriting compiled assets
- Fixed error output
- Fixed no-ignore flag on download

v0.8.0 (Aug 20, 2018)
=====================
Minor number change because the asset manifest was removed and added a get
command as well as renamed bootstrap to new
- new command
- get command
- Remove assets manifest
- Minimized memory footprint for upload and replace
- handling upload/replace wildcards more gracefully
- better errors for connection issues
- better errors for auth issues
- better errors for timeouts
- warning while working on live themes
- fixing a problem with time.Ticker that causes high CPU
- moved to buildkite
- code coverage
- optimization of CPU by not using time.Ticker because it leaks and is a high
resource use

v0.7.5  (Nov 3, 2017)
=====================
- Fixing bad manifest pruning

v0.7.4 (Sep 18, 2017)
=====================
- Fixing how the manifest deals with dates

v0.7.3 (Aug 28, 2017)
=====================
- Fixing symlinks used as project directory
- Fixing race condition in manifest reads
- Fixing environment flag on the configure command
- Skipping invalid configs to allow invalid re-usable config

v0.7.2 (Aug 21, 2017)
=====================
- Fixing windows watch paths

v0.7.1 (Aug 21, 2017)
=====================
- Filtering out files properly on download
- Local changes to a file on disk are now considered on every upload/replace